--- a/assets/main.css
+++ b/assets/main.css
@@ -566,54 +566,6 @@ h6 {
   height: 100%;
 }
 
-/* Card Section -------------------------------------------------------- */
-.cards-box {
-  display: flex;
-  justify-content: center;
-  margin-top: 3rem;
-  text-align: center;
-}
-.cards {
-  perspective: 150rem;
-  position: relative;
-  height: 20rem;
-  max-width: 400px;
-  box-shadow: none;
-  background: none;
-  cursor: pointer;
-}
-
-.card-side {
-  height: 20rem;
-  border-radius: 0.3rem;
-  transition: all 0.8s ease;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 2rem;
-  color: white;
-}
-
-.card-side.back {
-  transform: rotateY(-180deg);
-  background-color: var(--clr-accent);
-  color: var(--clr-dark);
-}
-
-.card-side.front {
-  background-color: var(--clr-secondary);
-}
-
-.cards:hover .card-side.front {
-  transform: rotateY(180deg);
-}
-
-.cards:hover .card-side.back {
-  transform: rotateY(0deg);
-}
-
 /* About Section ----------------------------------------------------- */
 .about-section p {
   text-align: justify;
@@ -642,7 +594,9 @@ h6 {
 #numbers {
   background-color: var(--clr-secondary);
   color: var(--clr-primary);
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
+  padding-top: 1rem;
+  border-radius: 1.3rem;
 }
 article {
   background: var(--clr-secondary);
