--- a/resources/scss/home/files/main.css
+++ b/resources/scss/home/files/main.css
@@ -2,17 +2,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Iranian Sans';
+  font-family: "Iranian Sans";
+  font-weight: 500;
+  font-style: normal;
 }
 body {
   overflow-x: hidden;
   background-color: var(--clr-primary);
 }
-h1,h2,h3,h4,h5,h6,p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   user-select: none;
 }
-h1,h2,h3,h4,h5,h6 {
-font-family: "Vazir";
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Vazir";
 }
 /* Variables ----------------------------------------------------------------- */
 :root {
@@ -21,20 +34,7 @@ font-family: "Vazir";
   --clr-accent: rgb(233, 195, 30);
   --clr-dark: rgb(58, 62, 61);
 }
-/* Scroll Bar ---------------------------------------------------------------------- */
-/* #scroll-progress {
-  position: fixed;
-  top: 0;
-  width: 0%;
-  height: 7px;
-  background-image: linear-gradient(
-    315deg,
-    var(--clr-secondary) 0%,
-    var(--clr-accent) 50%
-  );
-  z-index: 10000;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-} */
+
 
 /* Mobile Bottom Navbar ---------------------------------------------*/
 .nav {
@@ -42,7 +42,7 @@ font-family: "Vazir";
   bottom: 0;
   width: 100%;
   height: 55px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px -3px 6px, rgba(0, 0, 0, 0.23) 0px -3px 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px -2px 3px, rgba(0, 0, 0, 0.23) 0px -2px 3px;
   background-color: var(--clr-primary);
   display: none;
   overflow-x: hidden;
@@ -53,13 +53,12 @@ font-family: "Vazir";
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-grow: 1;
   min-width: 50px;
   overflow: hidden;
   white-space: nowrap;
-  font-family: sans-serif;
-  font-size: 13px;
+  font-size: 11px;
   color: var(--clr-dark);
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
@@ -67,7 +66,7 @@ font-family: "Vazir";
 }
 
 .nav__link:hover {
-  background-color: var(--clr-primary);
+  color: var(--clr-dark);
 }
 
 .nav__link--active {
@@ -75,9 +74,8 @@ font-family: "Vazir";
 }
 
 .nav__icon {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
-
 
 /* Navbar ------------------------------------------------------------------------ */
 .navbar-brand {
@@ -89,7 +87,7 @@ font-family: "Vazir";
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 300px;
+  width: 330px;
   margin: auto;
 }
 .costume-nav {
@@ -132,6 +130,9 @@ font-family: "Vazir";
 .costume-nav li a:focus:before {
   transform: scale(1);
 }
+.dropdown-menu {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
 
 /* Navbar Vertical Line --------------------------------------------------- */
 .vertical-line {
@@ -167,9 +168,8 @@ font-family: "Vazir";
 .btn {
   letter-spacing: 0.1em;
   cursor: pointer;
-  font-size: 14px;
   font-weight: 600;
-  line-height: 35px;
+  line-height: 41px;
   max-width: 130px;
   position: relative;
   text-decoration: none;
@@ -179,7 +179,6 @@ font-family: "Vazir";
   align-items: center;
   justify-content: center;
   border-radius: 0.5rem;
-  box-shadow: 0 0 3px rgb(58, 62, 61, 0.5);
 }
 .btn i {
   font-size: 1.1rem;
@@ -190,7 +189,7 @@ font-family: "Vazir";
 }
 .effect04 {
   color: var(--clr-dark);
-  background-color: var(--clr-primary);
+  background-color: transparent;
   position: relative;
   transition-duration: 0.4s;
   overflow: hidden;
@@ -203,7 +202,7 @@ font-family: "Vazir";
 .effect04:hover {
   transition: none;
   color: var(--clr-accent);
-  background-color: var(--clr-accent);
+  /* background-color: var(--clr-accent); */
 }
 .effect04 span {
   color: var(--clr-dark);
@@ -211,7 +210,7 @@ font-family: "Vazir";
 .effect04:hover span {
   -webkit-transform: translateY(-400%) scale(-0.1, 20);
   transform: translateY(-400%) scale(-0.1, 20);
-  color: var(--clr-accent);
+  color: #fff;
 }
 .effect04::before {
   content: attr(data-sm-link-text);
@@ -232,26 +231,67 @@ font-family: "Vazir";
 /* Main Button --------------------------------------------------- */
 
 .primary-btn {
-  background-color: var(--clr-primary);
   color: var(--clr-dark);
+  background: transparent;
   margin-left: 1rem;
   cursor: pointer;
-  font-size: 14px;
-  font-weight: 600;
+  /* font-size: 14px; */
   line-height: 29px;
   padding: 0.7em 1rem;
   border-radius: 0.5rem;
-  position: relative;
+  transition: all 0.4s ease;
   text-decoration: none;
-  text-transform: uppercase;
-  transition: all ease 0.4s;
-  box-shadow: 0 0 3px rgb(58, 62, 61, 0.5);
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+}
+.primary-btn:after {
+  position: absolute;
+  content: " ";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease;
+  -webkit-transform: scale(0.1);
+  transform: scale(0.1);
+  border-radius: 0.5rem;
 }
 .primary-btn:hover {
   color: var(--clr-primary);
+  z-index: 2;
+}
+.primary-btn:hover:after {
   background-color: var(--clr-dark);
-  transition: all ease 0.4s;
-  box-shadow: 0 0 5px black inset;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  z-index: -1;
+}
+.primary-btn i {
+  font-size: 1.3rem;
+  transform: translateY(5px);
+}
+/* Secondary Button ------------------------------------------------*/
+.secondary-btn {
+  color: var(--clr-dark);
+  background: var(--clr-primary);
+  margin-left: 1rem;
+  cursor: pointer;
+  line-height: 15px;
+  padding: 0.7em 1rem;
+  border-radius: 0.5rem;
+  transition: all 0.3s ease;
+  text-decoration: none;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
+  font-weight: 600;
+}
+.secondary-btn:hover {
+  box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset,
+    rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
+    transition: all 0.3s ease;
+    color: var(--clr-primary);
+    background-color: var(--clr-dark);
 }
 
 /* Hamburger menu --------------------------------------------------- */
@@ -384,7 +424,7 @@ font-family: "Vazir";
   align-items: center;
 }
 .banner {
-  background-image: url(/public/orginal-banner.png);
+  background-image: url("./img/orginal-banner6.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -417,12 +457,12 @@ font-family: "Vazir";
 .quick-form:focus-within {
   border-color: var(--clr-accent);
   animation-name: padding-anim;
-  animation-duration: 500ms;
+  animation-duration: 400ms;
   animation-fill-mode: forwards;
 }
 @keyframes padding-anim {
   to {
-    padding: 1rem;
+    padding: 0.5rem;
   }
 }
 .quick-form input,
@@ -436,7 +476,7 @@ font-family: "Vazir";
   justify-content: space-evenly;
   align-items: center;
   padding: 1rem;
-  border:  1px solid rgba(0, 0, 0, 0.267);
+  border: 1px solid rgba(0, 0, 0, 0.267);
   border-radius: 3rem 3rem 0 0;
   margin-top: 1rem;
   list-style: none;
@@ -446,17 +486,19 @@ font-family: "Vazir";
   flex-direction: column;
   align-items: center;
   justify-content: center;
-   text-decoration: none;
-   color: var(--clr-dark);
-   border-bottom: 3px solid transparent;
-   font-weight: 900;
-   padding-bottom: 5px;
-   border-radius: 0 0 3px 3px;
+  text-decoration: none;
+  color: var(--clr-dark);
+  border-bottom: 3px solid transparent;
+  font-weight: 600;
+  font-size: 0.9rem;
+  padding-bottom: 5px;
+  border-radius: 0 0 3px 3px;
 }
 .quick-service-icons li {
   border-right: 1px solid black;
   width: 100%;
   height: 100%;
+  padding-top: 0.5rem;
 }
 .quick-service-icons li:hover {
   /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.164); */
@@ -468,67 +510,47 @@ font-family: "Vazir";
 .quick-service-icons li:nth-child(5):hover {
   border-radius: 1.5rem 0 0 0;
 }
-.quick-service-icons li:nth-child(1){
+.quick-service-icons li:nth-child(1) {
   border: none;
 }
-.quick-service-icons  i {
-  font-size: 2.5rem;
+.quick-service-icons i {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
 }
 .quick-service-icons a:hover {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-color: var(--clr-secondary);
-  background-image: linear-gradient(315deg, rgb(233, 195, 30) 0%, rgb(0, 93, 131) 74%);
+  color: var(--clr-secondary);
   border-bottom-color: var(--clr-accent);
   transition: ease 0.5s;
 }
-
-/* Card Section -------------------------------------------------------- */
-.cards-box {
+.service-icons-mobile {
+  display: none;
+  padding: 0;
+}
+.service-icons-mobile ul {
   display: flex;
-  justify-content: center;
-  margin-top: 3rem;
-  text-align: center;
-}
-.cards {
-  perspective: 150rem;
-  position: relative;
-  height: 20rem;
-  max-width: 400px;
-  box-shadow: none;
-  background: none;
-  cursor: pointer;
-}
-
-.card-side {
-  height: 20rem;
-  border-radius: 0.3rem;
-  transition: all 0.8s ease;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 2rem;
-  color: white;
-}
-
-.card-side.back {
-  transform: rotateY(-180deg);
-  background-color: var(--clr-accent);
-  color: var(--clr-dark);
-}
-
-.card-side.front {
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0.7rem;
+  list-style: none;
   background-color: var(--clr-secondary);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  margin: 0;
 }
-
-.cards:hover .card-side.front {
-  transform: rotateY(180deg);
+.service-icons-mobile a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--clr-primary);
+  font-size: 1.5rem;
 }
-
-.cards:hover .card-side.back {
-  transform: rotateY(0deg);
+.service-icons-mobile a:hover {
+  color: var(--clr-accent);
+}
+.service-icons-mobile li {
+  width: 100%;
+  height: 100%;
 }
 
 /* About Section ----------------------------------------------------- */
@@ -556,43 +578,51 @@ font-family: "Vazir";
 }
 
 /* Numbers ------------------------------------------------------------ */
+#numbers {
+  background-color: var(--clr-secondary);
+  color: var(--clr-primary);
+  padding-bottom: 3rem;
+  padding-top: 1rem;
+  border-radius: 1.3rem;
+}
 article {
-  background: var(--clr-primary);
+  background: var(--clr-secondary);
   padding: 1rem 2rem;
   border-bottom: 4px solid transparent;
   text-align: center;
 }
 
 article span {
-  font-size: 3rem;
-  font-weight: 700;
-  line-height: 1.25;
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.5;
+  font-family: "Vazir";
+  color: var(--clr-accent);
 }
 
 article p {
   margin: 0;
-  text-transform: capitalize;
-  font-size: 1.5rem;
+  font-weight: 400;
+  font-size: 1rem;
 }
-.hour-number {
-  border-bottom-color: rgb(0, 93, 131);
+.service-number {
+  border-bottom-color: #f6f6f6;
 }
-.costumer-number {
+.done-projects-number {
   border-bottom-color: rgb(233, 195, 30);
 }
-.project-number {
+.current-projects-number {
   border-bottom-color: rgb(58, 62, 61);
 }
 
 /* Brands Logo --------------------------------------------------------- */
-.brands-logo img{
-    width: 5rem;
-    height: 5rem;
+.brands-logo img {
+  width: 5rem;
+  height: 5rem;
 }
 .company-brands {
-   margin-top: 7rem;
+  margin-top: 7rem;
 }
-
 /* Footer --------------------------------------------------------------------*/
 .footer {
   background-color: var(--clr-dark);
@@ -700,16 +730,16 @@ footer p span {
   border-bottom: 2px solid var(--clr-primary);
 }
 .bxl-instagram:hover {
-  color: #EA5A47;
+  color: #ea5a47;
 }
 .bxl-whatsapp:hover {
-  color: #26D367;
+  color: #26d367;
 }
 .bxl-linkedin:hover {
-  color: #0A66C2;
+  color: #0a66c2;
 }
 .bxl-youtube:hover {
-  color: #FF0000;
+  color: #ff0000;
 }
 
 /* Owl Carousel ------------------------------------------------*/
@@ -724,34 +754,34 @@ footer p span {
 .carousel-banner img {
   border-radius: 1.3rem;
 }
-.owl-theme .owl-dots .owl-dot span{
-  width:15px;
-  height:10px;
-  margin:1.5rem 7px;
+.owl-theme .owl-dots .owl-dot span {
+  width: 15px;
+  height: 10px;
+  margin: 1.5rem 7px;
   background: var(--clr-dark) !important;
-  display:block;
-  -webkit-backface-visibility:visible;
-  -webkit-transition:opacity 200ms ease;
-  -moz-transition:opacity 200ms ease;
-  -ms-transition:opacity 200ms ease;
-  -o-transition:opacity 200ms ease;
-  transition:opacity 200ms ease;
-  -webkit-border-radius:30px;
-  -moz-border-radius:30px;
-  border-radius:30px;
+  display: block;
+  -webkit-backface-visibility: visible;
+  -webkit-transition: opacity 200ms ease;
+  -moz-transition: opacity 200ms ease;
+  -ms-transition: opacity 200ms ease;
+  -o-transition: opacity 200ms ease;
+  transition: opacity 200ms ease;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
   box-shadow: 0 0 3px var(--clr-dark);
   background: var(--clr-accent) !important;
 }
-.owl img{
-  width: 100px !important;
+.owl img {
+  /* width: 100px !important;
   height: 80px;
-  filter:  brightness(25%);
+  filter:  brightness(25%); */
   margin: auto;
 }
-.owl i{
+.owl i {
   margin: 1.5rem 0.5rem 0 0.5rem;
   font-size: 1.5rem;
   color: var(--clr-dark);
@@ -777,14 +807,15 @@ footer p span {
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 10px;
 }
 /* button */
 ::-webkit-scrollbar-button {
-  background: var(--clr-accent);
+  background: transparent;
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
+  border-radius: 0.5rem;
   background: var(--clr-secondary);
 }
 /* Handle on hover */
@@ -797,7 +828,7 @@ footer p span {
 }
 /* The track NOT covered by the handle.
 ::-webkit-scrollbar-track-piece {
-  background: #000;
+  background: #000; 
 }
 /* Corner */
 ::-webkit-scrollbar-corner {
@@ -813,9 +844,39 @@ footer p span {
   .vertical-line {
     display: none;
   }
+  .banner {
+    background-image: url("./img/orginal-banner7.png");
+    background-size: cover;
+  }
+  .quick-service-icons li {
+    border-right: none;
+  }
+  .quick-service-icons li:hover {
+    background: none;
+  }
+  .quick-service-icons ul {
+    padding-bottom: 0;
+    /* border: none; */
+  }
+  .quick-service-icons i {
+    margin-bottom: 0.5rem;
+  }
+  .quick-service-icons a {
+    border: none;
+  }
+  .quick-service-icons a:hover {
+    color: var(--clr-secondary);
+  }
   .quick-service-box {
     width: 100%;
     border-radius: 1.3rem;
+    margin-top: -5rem;
+  }
+  .service-icons-mobile {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 11000;
   }
   .quick-form {
     display: flex;
@@ -830,8 +891,8 @@ footer p span {
   .quick-form a {
     margin-top: 0.7rem;
   }
-  .cards {
-    margin-top: 1rem;
+  .main-banners {
+    margin-top: 4rem;
   }
   .about-section h3 {
     text-align: center;
@@ -845,6 +906,9 @@ footer p span {
   .why-order-online-section p {
     text-align: center;
   }
+  .why-order-online-section {
+    margin-top: 1rem;
+  }
   hr {
     margin: 1rem auto;
   }
@@ -857,11 +921,14 @@ footer p span {
     margin-top: 1rem;
   }
   .footer p {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     text-align: center;
   }
+  .footer-links {
+    margin-top: 3rem;
+  }
   .quick-service-icons a {
-    font-size: 0.4rem;
+    font-size: 0.7rem;
   }
   .quick-service-icons i {
     font-size: 1.3rem;
@@ -873,6 +940,88 @@ footer p span {
     margin-bottom: 3rem;
   }
   .footer-contact {
+    font-size: 0.9rem;
+  }
+  .owl-prev,
+  .owl-next {
+    display: none;
+  }
+
+  /* Footer Collapse ---------------------------------------------*/
+  .collapsible-trigger {
+    cursor: pointer;
+  }
+
+  .collapse-active,
+  .collapsible-trigger:hover {
+    color: var(--clr-primary);
+  }
+
+  .collapsible-trigger:after {
+    font-family: "Font Awesome 5 Free";
+    content: "\f103";
+    color: var(--clr-accent);
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+
+  .collapse-active:after {
+    content: "\f102";
+    color: var(--clr-secondary);
+  }
+
+  .content-collapse {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
+}
+/* Tablet Screen -----------------------------------------------*/
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .content-collapse {
+    max-height: 100%;
+    overflow: visible;
+  }
+  .collapsible-trigger:after {
+    content: "";
+  }
+  .quick-service-box {
+    width: 100%;
+    margin-top: -5rem;
+  }
+  .quick-service-icons ul {
+    padding-bottom: 0.5rem;
+  }
+  .quick-service-icons a {
+    font-size: 1rem;
+  }
+  .service-number p,
+  .done-projects-number p,
+  .current-projects-number p {
+    font-size: 0.8rem;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .service-icons-mobile {
+    position: fixed;
+    top: -1000px;
+  }
+  .quick-service-box {
+    width: 100%;
+    margin-top: -5rem;
+  }
+  .quick-service-icons a {
+    font-size: 0.9rem;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1028px) {
+  .costume-nav {
+    font-size: 0.8rem;
+  }
+}
+@media only screen and (min-width: 1029px) and (max-width: 1049px) {
+  .costume-nav {
     font-size: 0.9rem;
   }
 }
