--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -468,7 +468,7 @@ h6 {
   align-items: center;
 }
 .banner {
-  background-image: url("./img/orginal-banner6.png");
+  // background-image: url("./img/orginal-banner6.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -889,7 +889,7 @@ footer p span {
     display: none;
   }
   .banner {
-    background-image: url("./img/orginal-banner7.png");
+    // background-image: url("./img/orginal-banner7.png");
     background-size: cover;
   }
   .quick-service-icons li {
