--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -468,7 +468,7 @@ h6 {
   align-items: center;
 }
 .banner {
-  // background-image: url("./img/orginal-banner6.png");
+  // background-image: url("");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -500,20 +500,31 @@ h6 {
 }
 .quick-form:focus-within {
   border-color: var(--clr-accent);
-  animation-name: padding-anim;
-  animation-duration: 400ms;
-  animation-fill-mode: forwards;
 }
-@keyframes padding-anim {
-  to {
-    padding: 0.5rem;
-  }
-}
-.quick-form input,
-.quick-form select {
+input[type="text"]::placeholder {  
+  text-align: center; 
+} 
+.date-input input,
+.city-select select {
   padding: 0.4rem;
   border: 1px solid rgba(58, 62, 61, 0.548);
-  border-radius: 0.3rem;
+  border-radius: 0.3rem 0 0 0.3rem !important;
+}
+.input-group input:focus,
+.input-group select:focus {
+  outline: none;
+  border: none;
+}
+.input-group-text {
+  border-radius: 0 0.3rem 0.3rem 0 !important;
+  background-color: var(--clr-primary);
+  color: var(--clr-dark);
+}
+.input-group {
+  width: 25% ;
+}
+.input-group-text .fa-map-marker-alt {
+  line-height: unset;
 }
 .quick-service-icons ul {
   display: flex;
@@ -605,6 +616,7 @@ h6 {
 /* Company Video --------------------------------------------- */
 .h_iframe-aparat_embed_frame {
   position: relative;
+  margin-top: 4rem;
 }
 .h_iframe-aparat_embed_frame .ratio {
   display: block;
@@ -926,14 +938,16 @@ footer p span {
     display: flex;
     flex-direction: column;
   }
-  .quick-form label,
-  .quick-form input,
-  .quick-form select {
-    width: 100%;
-    margin-top: 0.7rem;
-  }
   .quick-form a {
-    margin-top: 0.7rem;
+    margin-top: 1rem;
+  }
+  .date-input {
+    width: 100% ;
+    margin-top: 1rem;
+  }
+  .city-select {
+    width: 100%;
+    margin: 1rem;
   }
   .main-banners {
     margin-top: 4rem;
@@ -943,6 +957,9 @@ footer p span {
   }
   .about-section p {
     text-align: center;
+  }
+  .h_iframe-aparat_embed_frame {
+    margin: 1rem;
   }
   .why-order-online-section h3 {
     text-align: center;
