--- a/public/css/home.css
+++ b/public/css/home.css
@@ -554,6 +554,7 @@ h6 {
 }
 
 .banner {
+  background-image: url(/images/main-banner.png?886b0066a308488a9677c2ea3f454ecd);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -575,7 +576,7 @@ h6 {
   border-radius: 1.3rem;
   width: 70%;
   margin: auto;
-  margin-top: -7rem;
+  margin-top: -5rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
@@ -619,6 +620,7 @@ input[type=text]::placeholder {
   border-radius: 0 0.3rem 0.3rem 0 !important;
   background-color: var(--clr-primary);
   color: var(--clr-dark);
+  cursor: pointer;
 }
 
 .input-group {
@@ -1058,7 +1060,9 @@ footer p span {
   }
 
   .banner {
+    background-image: url(/images/main-banner-mobile.png?bad7cded9982cd167a8b045b15bc1e3d);
     background-size: cover;
+    background-position: left;
   }
 
   .quick-service-icons li {
