edit about us page

--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -889,6 +889,14 @@ footer p span {
   margin-bottom: 2rem;
 }
 
+// about us page style.....................................................
+
+
+
+
+
+
+
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
