**about us** add icon and edit style

--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -74,6 +74,9 @@ h5,
 h6 {
   font-family: "Vazir";
 }
+
+
+.mt-6{margin-top: 100px;}
 /* Variables ----------------------------------------------------------------- */
 :root {
   --clr-primary: #f6f6f6;
@@ -891,7 +894,11 @@ footer p span {
 
 // about us page style.....................................................
 
-
+.custom-height{
+  height: 130px;
+  background-color: #ff0000;
+  font-size: ;
+}
 
 
 
