--- a/public/css/home.css
+++ b/public/css/home.css
@@ -107,6 +107,10 @@ h6 {
   font-family: "Vazir";
 }
 
+.mt-6 {
+  margin-top: 100px;
+}
+
 /* Variables ----------------------------------------------------------------- */
 :root {
   --clr-primary: #f6f6f6;
@@ -1096,6 +1100,11 @@ footer p span {
 
 .video-service-description ul li p {
   word-spacing: normal;
+}
+
+.custom-height {
+  height: 130px;
+  background-color: #ff0000;
 }
 
 /* Scroll Bar ----------------------------------------------------------- */
