--- a/public/css/home.css
+++ b/public/css/home.css
@@ -106,6 +106,10 @@ h6 {
   font-family: "Vazir";
 }
 
+.mt-6 {
+  margin-top: 100px;
+}
+
 /* Variables ----------------------------------------------------------------- */
 :root {
   --clr-primary: #f6f6f6;
