--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -894,11 +894,11 @@ footer p span {
 
 // about us page style.....................................................
 
-.custom-height{
-  height: 130px;
-  background-color: #ff0000;
-  font-size: ;
-}
+// .custom-height{
+//   height: 200px;
+
+
+// }
 
 
 
