--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1025,7 +1025,11 @@ footer p span {
 
 
 
+  .custom-boxshodow{
+    -webkit-box-shadow: 1px 6px 18px 5px rgba(0,0,0,0.64); 
+    box-shadow: 1px 6px 18px 5px rgba(0,0,0,0.64);
 
+  }
 
 
 
