--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -979,7 +979,7 @@ footer p span {
 }
 /* Track */
 ::-webkit-scrollbar-track {
-    background: var(--clr-primary);
+    background:transparent;
 }
 /* The track NOT covered by the handle.
 ::-webkit-scrollbar-track-piece {
