--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1026,14 +1026,10 @@ footer p span {
 }
 
 .digital-marketing-pic {
-  background-image: url(/images/digital-marketing.png?8f73360376c8a5a9ff3a909379cc193e);
-  background-size: contain;
-  background-repeat: no-repeat;
   filter: drop-shadow(0 0 1px black);
-}
-
-.service-beh-negaran p {
-  text-align: justify;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .service-beh-negaran h2 {
@@ -1054,21 +1050,14 @@ footer p span {
   background-color: var(--clr-secondary);
 }
 
-#video-service p {
-  text-align: justify;
+#video-service .video-icon-pic img {
+  filter: drop-shadow(0 0 1px black);
 }
 
-#video-service .video-icon-pic {
-  background-image: url(/images/video-camera.png?327806fa1bae635990acf866e484fbe8);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: left center;
-  background-position: 0 80px;
-  transition: filter 0.5s;
-}
-
-#video-service .video-icon-pic:hover {
-  filter: grayscale(100%);
+.video-icon-pic {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .video-service-description {
@@ -1079,12 +1068,11 @@ footer p span {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px, rgba(0, 0, 0, 0.16) 0px 3px 6px inset, rgba(0, 0, 0, 0.23) 0px 3px 6px inset;
 }
 
-.video-service-description i {
-  font-size: 5rem;
-  color: var(--clr-secondary);
-  text-align: center;
-  margin: 0.5rem auto;
-  display: block;
+.video-service-description img {
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  margin: 1rem auto;
 }
 
 .video-service-description h5 {
@@ -1100,6 +1088,20 @@ footer p span {
 
 .video-service-description ul li p {
   word-spacing: normal;
+  font-weight: 600;
+}
+
+.video-service-description ul {
+  list-style: none;
+}
+
+.video-service-description ul li::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f0d9";
+  color: var(--clr-dark);
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
 }
 
 .card {
