--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -76,8 +76,9 @@ h6 {
     font-family: "Vazir";
 }
 
-
-.mt-6{margin-top: 100px;}
+.mt-6 {
+    margin-top: 100px;
+}
 /* Variables ----------------------------------------------------------------- */
 :root {
     --clr-primary: #f6f6f6;
@@ -874,13 +875,10 @@ footer p span {
     margin-top: 5rem;
 }
 .digital-marketing-pic {
-    background-image: url("../../../public/images/digital-marketing.png");
-    background-size: contain;
-    background-repeat: no-repeat;
     filter: drop-shadow(0 0 1px black);
-}
-.service-beh-negaran p {
-    text-align: justify;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .service-beh-negaran h2 {
     color: var(--clr-secondary);
@@ -897,70 +895,68 @@ footer p span {
 #video-service hr {
     background-color: var(--clr-secondary);
 }
-#video-service p {
-    text-align: justify;
+#video-service .video-icon-pic img {
+    filter: drop-shadow(0 0 1px black);
 }
-#video-service .video-icon-pic {
-    background-image: url("../../../public/images/video-camera.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-position: 0 80px;
-    transition: filter 0.5s;
-}
-#video-service .video-icon-pic:hover {
-  filter: grayscale(100%);
+.video-icon-pic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .video-service-description {
-  background-color: #fff;
-  border-radius: 1.3rem;
-  padding: 0.5rem 2rem;
-  margin-top: 2.5rem;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px,
-  rgba(0, 0, 0, 0.16) 0px 3px 6px inset, rgba(0, 0, 0, 0.23) 0px 3px 6px inset;
+    background-color: #fff;
+    border-radius: 1.3rem;
+    padding: 0.5rem 2rem;
+    margin-top: 2.5rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px,
+        rgba(0, 0, 0, 0.16) 0px 3px 6px inset,
+        rgba(0, 0, 0, 0.23) 0px 3px 6px inset;
 }
-.video-service-description i {
-  font-size: 5rem;
-  color: var(--clr-secondary);
-  text-align: center;
-  margin: 0.5rem auto;
-  display: block;
+.video-service-description img {
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    margin: 1rem auto;
 }
 .video-service-description h5 {
-  text-align: center;
-  color: var(--clr-secondary);
-  margin: 1rem auto;
+    text-align: center;
+    color: var(--clr-secondary);
+    margin: 1rem auto;
 }
 .video-service-description p {
-  margin: 1rem 0.5rem;
-  text-align: justify;
+    margin: 1rem 0.5rem;
+    text-align: justify;
 }
 .video-service-description ul li p {
-  word-spacing: normal;
+    word-spacing: normal;
+    font-weight: 600;
+}
+.video-service-description ul {
+    list-style: none;
+}
+.video-service-description ul li::before {
+    font-family: "Font Awesome 5 Free";
+    content: "\f0d9";
+    color: var(--clr-dark);
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
 }
 
 // about us page style.....................................................
 
-
-
-
-
- 
-
-
-.card{
+.card {
     position: relative;
     width: 300px;
     height: 350px;
     background: #fff;
     margin: 0 auto;
     border-radius: 4px;
-    box-shadow:0 2px 10px rgba(0,0,0,.2);
-  }
-  .card:before,
-  .card:after
-  {
-    content:"";
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.card:before,
+.card:after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -969,86 +965,62 @@ footer p span {
     border-radius: 4px;
     background: #fff;
     transition: 0.5s;
-    z-index:-1;
-  }
-  .card:hover:before{
-  transform: rotate(20deg);
-  box-shadow: 0 2px 20px rgba(0,0,0,.2);
-  }
-  .card:hover:after{
-  transform: rotate(10deg);
-  box-shadow: 0 2px 20px rgba(0,0,0,.2);
-  }
-  .card .imgBx{
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  bottom: 20px;
-  right: 10px;
-  background: #222;
-  transition: 0.5s;
-  z-index: 1;
-  }
-  
-  .card:hover .imgBx
-  {
+    z-index: -1;
+}
+.card:hover:before {
+    transform: rotate(20deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+.card:hover:after {
+    transform: rotate(10deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+.card .imgBx {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    bottom: 20px;
+    right: 10px;
+    background: #222;
+    transition: 0.5s;
+    z-index: 1;
+}
+
+.card:hover .imgBx {
     bottom: 100px;
-  }
+}
 
-  .card .imgBx img{
-      position: absolute;
-      top: 0px;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-  }
+.card .imgBx img {
+    position: absolute;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-  .card .details{
-      position: absolute;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      height: 80px;
-      text-align: center;
-  }
+.card .details {
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    height: 80px;
+    text-align: center;
+}
 
-  .card .details h2{
-   margin: 0;
-   padding: 0;
-   font-weight: 600;
-   font-size: 20px;
-   color: #777;
-   text-transform: uppercase;
-  } 
+.card .details h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 20px;
+    color: #777;
+    text-transform: uppercase;
+}
 
-
-
-
-  .custom-boxshodow{
-    -webkit-box-shadow: 1px 6px 18px 5px rgba(0,0,0,0.64); 
-    box-shadow: 1px 6px 18px 5px rgba(0,0,0,0.64);
-
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.custom-boxshodow {
+    -webkit-box-shadow: 1px 6px 18px 5px rgba(0, 0, 0, 0.64);
+    box-shadow: 1px 6px 18px 5px rgba(0, 0, 0, 0.64);
+}
 
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
@@ -1070,7 +1042,7 @@ footer p span {
 }
 /* Track */
 ::-webkit-scrollbar-track {
-    background:transparent;
+    background: transparent;
 }
 /* The track NOT covered by the handle.
 ::-webkit-scrollbar-track-piece {
