--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1111,8 +1111,8 @@ footer p span {
 .card {
   position: relative;
   width: 300px;
-  height: 350px;
-  background: #fff;
+  height: 370px;
+  background: --clr-primary;
   margin: 0 auto;
   border-radius: 4px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -1146,9 +1146,9 @@ footer p span {
   position: absolute;
   top: 10px;
   left: 10px;
-  bottom: 20px;
+  bottom: 8px;
   right: 10px;
-  background: #222;
+  background: #fcfcfc;
   transition: 0.5s;
   z-index: 1;
 }
@@ -1160,11 +1160,23 @@ footer p span {
 .card .imgBx img {
   position: absolute;
   top: 0px;
-  left: 0;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  transition: 1.5s;
+}
+
+.card .imgBx img:hover {
+  position: absolute;
+  top: 0px;
+  right: 0;
+  width: 80%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: translate();
+  transition: 1s;
 }
 
 .card .details {
@@ -1181,12 +1193,28 @@ footer p span {
   padding: 0;
   font-weight: 600;
   font-size: 20px;
-  color: #777;
+  color: #3a3737;
   text-transform: uppercase;
 }
 
 .custom-boxshodow {
-  box-shadow: 1px 6px 18px 5px rgba(0, 0, 0, 0.64);
+  box-shadow: 2px 2px 8px 3px rgba(0, 0, 0, 0.24);
+}
+
+.custom-fontSize {
+  font-size: 16px;
+}
+
+.s {
+  margin-top: -15px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.test {
+  height: 150px;
 }
 
 /* Scroll Bar ----------------------------------------------------------- */
