--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -952,8 +952,8 @@ footer p span {
 .card {
     position: relative;
     width: 300px;
-    height: 350px;
-    background: #fff;
+    height: 370px;
+    background:   var(--clr-primary)
     margin: 0 auto;
     border-radius: 4px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -983,9 +983,9 @@ footer p span {
     position: absolute;
     top: 10px;
     left: 10px;
-    bottom: 20px;
+    bottom: 8px;
     right: 10px;
-    background: #222;
+    background: rgb(252, 252, 252);
     transition: 0.5s;
     z-index: 1;
 }
@@ -997,11 +997,30 @@ footer p span {
 .card .imgBx img {
     position: absolute;
     top: 0px;
-    left: 0;
+    // left: 0;
+    // right: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: 1.5s;
 }
+
+.card .imgBxx img:hover {
+    position: absolute;
+    top: 0px;
+    // left: 0;
+    right: 0;
+    width: 80%;
+    height: 100%;
+    object-fit: cover;
+    transform: translate();
+    transition: 1s;
+}
+
+
+
+
+
 
 .card .details {
     position: absolute;
@@ -1017,13 +1036,31 @@ footer p span {
     padding: 0;
     font-weight: 600;
     font-size: 20px;
-    color: #777;
+    color: rgb(58, 55, 55);
     text-transform: uppercase;
 }
 
+// border of the all card
 .custom-boxshodow {
-    -webkit-box-shadow: 1px 6px 18px 5px rgba(0, 0, 0, 0.64);
-    box-shadow: 1px 6px 18px 5px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 2px 2px 8px 3px rgba(0,0,0,0.24); 
+    box-shadow: 2px 2px 8px 3px rgba(0,0,0,0.24);
+}
+
+// font size of icon
+.custom-fontSize {
+    font-size: 16px;
+}
+
+.s {
+    margin-top: -15px;
+}
+
+a{
+  text-decoration: none;
+}
+
+.test{
+    height: 150px;
 }
 
 /* Scroll Bar ----------------------------------------------------------- */
