--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -953,7 +953,7 @@ footer p span {
     position: relative;
     width: 300px;
     height: 370px;
-    background:   var(--clr-primary)
+    background:   var(--clr-primary);
     margin: 0 auto;
     border-radius: 4px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
