--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1159,27 +1159,25 @@ footer p span {
   bottom: 100px;
 }
 
+.card .imgBx img {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+  transition: 1.5s;
+  border-radius: 0.3rem;
+}
+
 .card:hover .imgBx img {
   position: absolute;
   top: 0px;
   right: 0;
   width: 80%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
   transition: 1s;
   border-radius: 1.3rem;
-}
-
-.card .imgBx img {
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  transition: 1.5s;
-  border-radius: 0.3rem;
 }
 
 .card .details {
@@ -1229,7 +1227,7 @@ footer p span {
 }
 
 .card .imgBx span i:hover {
-  color: black;
+  font-size: 30px;
 }
 
 /* Scroll Bar ----------------------------------------------------------- */
