--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -994,26 +994,27 @@ footer p span {
 .card:hover .imgBx {
     bottom: 100px;
 }
-.card:hover .imgBx img {
-    position: absolute;
-    top: 0px;
-    right: 0;
-    width: 80%;
-    height: 100%;
-    object-fit: cover;
-    transition: 1s;
-    border-radius: 1.3rem;
-}
 
 .card .imgBx img {
     position: absolute;
     top: 0px;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     transition: 1.5s;
     border-radius: 0.3rem;
 }
+
+.card:hover .imgBx img {
+    position: absolute;
+    top: 0px;
+    right: 0;
+    width: 80%;
+    height: 100%;
+    transition: 1s;
+    border-radius: 1.3rem;
+}
+
 .card .details {
     position: absolute;
     left: 10px;
@@ -1032,41 +1033,37 @@ footer p span {
     text-transform: uppercase;
 }
 
-// border of the all card
+// border of the all card-------------------
 .custom-boxshodow {
     -webkit-box-shadow: 2px 2px 8px 3px rgba(0, 0, 0, 0.24);
     box-shadow: 2px 2px 8px 3px rgba(0, 0, 0, 0.24);
 }
 
-
+// icon height-------------------------------
 .custom-height {
     height: 80%;
 }
 
-.custom-border{
+// border radius for card---------------------
+.custom-border {
     border-radius: 1.3rem;
 }
 
-
-.card .imgBx span .fa-instagram{
-    color: var(--clr-secondary)
+// icon color---------------------------------
+.card .imgBx span .fa-instagram {
+    color: var(--clr-secondary);
 }
-.card .imgBx span .fa-whatsapp{
-    
-    color: var(--clr-accent)
+.card .imgBx span .fa-whatsapp {
+    color: var(--clr-accent);
 }
 .card .imgBx span .fa-telegram {
-    color: var(--clr-dark)
+    color: var(--clr-dark);
 }
-.card .imgBx span .fa-github{
- 
-    color: black
-}
-.card .imgBx span i:hover{
+.card .imgBx span .fa-github {
     color: black;
-    // font-size: 35px;
-  
-  
+}
+.card .imgBx span i:hover {
+    font-size: 30px;
 }
 // .card .imgBx img:hover {
 //     position: absolute;
