finished service page html

--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -886,7 +886,14 @@ footer p span {
 .service-beh-negaran hr,
 #video-service hr,
 #photo-service hr,
-#website-service hr {
+#website-service hr,
+#design-service hr,
+#podcast-service hr,
+#advertise-consultation-service hr,
+#social-media-service hr,
+#advertise-campaign-service hr,
+#digital-marketing-service hr,
+#visual-effects-service hr {
     background-color: var(--clr-accent);
     padding: 3px;
     opacity: 1;
@@ -895,7 +902,14 @@ footer p span {
 }
 #video-service hr,
 #photo-service hr,
-#website-service hr {
+#website-service hr,
+#design-service hr,
+#podcast-service hr,
+#advertise-consultation-service hr,
+#social-media-service hr,
+#advertise-campaign-service hr,
+#digital-marketing-service hr,
+#visual-effects-service hr {
     background-color: var(--clr-secondary);
 }
 .icon-pic img {
