--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -946,7 +946,6 @@ footer p span {
     padding: 0.5rem 2rem;
     margin-top: 2.5rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
-
 }
 .service-description img {
     width: 5rem;
@@ -1068,64 +1067,64 @@ footer p span {
 
 // border of the all card
 
-
 .custom-height {
     height: 80%;
 }
 
-.custom-border{
+.custom-border {
     border-radius: 1.3rem;
 }
 
-
-.card .imgBx span .fa-instagram{
-    color: var(--clr-secondary)
-}
-.card .imgBx span .fa-whatsapp{
-    
-    color: var(--clr-accent)
-}
-.card .imgBx span .fa-telegram {
-    color: var(--clr-dark)
-}
-.card .imgBx span .fa-github{
- 
-    color: black
-}
-.card .imgBx span i:hover{
-    color: black;
-    // font-size: 35px;
-  
-  
-}
-
-.aboutUs-h2-color{
+.card .imgBx span .fa-instagram {
     color: var(--clr-secondary);
 }
-.card-h2-color2{
+.card .imgBx span .fa-whatsapp {
+    color: var(--clr-accent);
+}
+.card .imgBx span .fa-telegram {
+    color: var(--clr-dark);
+}
+.card .imgBx span .fa-github {
+    color: black;
+}
+.card .imgBx span i:hover {
+    color: black;
+    // font-size: 35px;
+}
+
+.aboutUs-h2-color {
+    color: var(--clr-secondary);
+}
+.card-h2-color2 {
     color: var(--clr-accent);
 }
 
-
-
-.aboutUs-custom-hr{
-        background-color: var(--clr-accent);
-        padding: 3px;
-        opacity: 1;
-        border-radius: 0.3rem;
-        margin-bottom: 2rem;
-    
+.aboutUs-custom-hr {
+    background-color: var(--clr-accent);
+    padding: 3px;
+    opacity: 1;
+    border-radius: 0.3rem;
+    margin-bottom: 2rem;
 }
 
-.aboutUs-custom-hr2{
+.aboutUs-custom-hr2 {
     background-color: var(--clr-secondary);
     padding: 3px;
     opacity: 1;
     border-radius: 0.3rem;
     margin-bottom: 2rem;
-
 }
 // Projects Page Style ----------------------------------------------------
+.project-page-title h3 {
+    color: var(--clr-secondary);
+}
+.project-page-title hr {
+    background-color: var(--clr-accent);
+    padding: 3px;
+    opacity: 1;
+    border-radius: 0.3rem;
+    margin-bottom: 2rem;
+}
 .my-shuffle-container {
     position: relative;
     overflow: hidden;
@@ -1143,22 +1142,47 @@ footer p span {
     display: block;
     width: 100%;
 }
+.btn-group {
+    display: flex;
+    justify-content: space-between;
+}
+.projects-btn {
+    color: var(--clr-dark);
+    background: var(--clr-primary);
+    margin-left: 1rem;
+    cursor: pointer;
+    line-height: 15px;
+    padding: 0.7em 0.7rem;
+    border-radius: 0.5rem;
+    transition: all 0.3s ease;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
+    font-weight: 600;
+    border: none;
+}
+.projects-btn:hover {
+    box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset,
+        rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
+    transition: all 0.3s ease;
+    color: var(--clr-primary);
+    background-color: var(--clr-dark);
+}
 @supports (object-fit: cover) {
     .picture-item img {
         max-width: none;
         height: 100%;
         object-fit: cover;
-   }
+    }
 }
 .picture-item--h2 {
     height: 464px;
-   /* 2x the height + 1 gutter */
+    /* 2x the height + 1 gutter */
 }
 .picture-item__inner {
     position: relative;
     height: 100%;
     overflow: hidden;
-    background: #ecf0f1;
+    background: #fff;
 }
 .picture-item__details {
     display: flex;
@@ -1188,39 +1212,40 @@ footer p span {
         left: 0;
         width: 100%;
         backdrop-filter: blur(7px);
-        color: white;
+        color: #fff;
         overflow: hidden;
-   }
+    }
     .picture-item--overlay .picture-item__description {
         display: none;
-   }
+    }
     .picture-item--overlay a {
         color: white;
         text-shadow: 0 0 1px black;
-   }
+    }
 }
 @media screen and (max-width: 767px) {
     .picture-item {
         height: auto;
         margin-top: 20px;
-   }
-    .picture-item__details, .picture-item__description {
+    }
+    .picture-item__details,
+    .picture-item__description {
         font-size: 0.875em;
         padding: 0.625em;
-   }
+    }
     .picture-item__description {
         padding-right: 0.875em;
         padding-bottom: 1.25em;
-   }
+    }
     .picture-item--h2 {
         height: auto;
-   }
+    }
 }
 .filter-label {
     display: block;
     padding: 0;
     margin-top: 0;
-    margin-bottom: 4px;
+    margin-bottom: 1rem;
     color: #95a5a6;
 }
 .filters-group {
@@ -1232,182 +1257,71 @@ footer p span {
     .filters-group-wrap {
         display: flex;
         justify-content: space-between;
-   }
+    }
 }
-.btn-group:after, .btn-group:before {
+.btn-group:after,
+.btn-group:before {
     content: " ";
     display: table;
 }
 .btn-group:after {
     clear: both;
 }
-.btn-group .btn {
-    float: left;
-    border-radius: 0;
+
+// .btn-group .btn:not(:first-child) {
+//     margin-left: -1px;
+// }
+
+// .secondary-btn.active,
+// .secondary-btn:active {
+//     color: v;
+//     background-color: var(--clr-secondary);
+// }
+// .secondary-btn:focus.active {
+//     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3),
+//         0 0 0 2px rgba(52, 73, 94, 0.4);
+// }
+// .secondary-btn:disabled {
+//     cursor: not-allowed;
+//     opacity: 0.7;
+//     color: #34495e;
+//     background-color: rgba(52, 73, 94, 0);
+// }
+.projects-btn.active,
+.projects-btn:active {
+    background-color: var(--clr-secondary);
+    color: var(--clr-accent);
 }
-.btn-group .btn:first-child {
-    border-radius: 3px 0 0 3px;
-}
-.btn-group .btn:not(:first-child) {
-    margin-left: -1px;
-}
-.btn-group .btn:last-child {
-    border-radius: 0 3px 3px 0;
-}
-.btn-group label.btn input[type=radio] {
-    position: absolute;
-    clip: rect(0, 0, 0, 0);
-    pointer-events: none;
-}
-.btn {
-    display: inline-block;
-    padding: 0.75em 0.8em;
-    text-align: center;
-    border-radius: 3px;
-    border: 1px solid #34495e;
-    color: #34495e;
-    font-size: 1rem;
-    background-color: rgba(52, 73, 94, 0);
-    transition: 0.2s ease-out;
-    cursor: pointer;
-    -webkit-appearance: none;
-}
-@media (-moz-touch-enabled: 0), (pointer: fine) {
-    .btn:hover {
-        color: #fff;
-        text-decoration: none;
-        background-color: #34495e;
-   }
-}
-.btn:focus {
-    outline-width: 0;
-    box-shadow: 0 0 0 2px rgba(52, 73, 94, .4);
-}
-.btn.active, .btn:active {
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .3);
-    color: #fff;
-    background-color: #34495e;
-}
-.btn:focus.active {
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .3), 0 0 0 2px rgba(52, 73, 94, .4);
-}
-.btn:disabled {
-    cursor: not-allowed;
-    opacity: 0.7;
-    color: #34495e;
-    background-color: rgba(52, 73, 94, 0);
-}
-.btn--primary {
-    color: #3498db;
-    border-color: #3498db;
-    background-color: rgba(52, 152, 219, 0);
-}
-@media (-moz-touch-enabled: 0), (pointer: fine) {
-    .btn--primary:hover {
-        background-color: #3498db;
-   }
-}
-.btn--primary:focus {
-    box-shadow: 0 0 0 2px rgba(52, 152, 219, .4);
-}
-.btn--primary.active, .btn--primary:active {
-    background-color: #3498db;
-}
-.btn--primary:focus.active {
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .3), 0 0 0 2px rgba(52, 152, 219, .4);
-}
-.btn--primary:disabled {
-    color: #3498db;
-    background-color: rgba(52, 152, 219, 0);
-}
-@media screen and (max-width: 767px) {
-    .btn {
-        font-size: 0.875rem;
-   }
-}
-.textfield {
-    -webkit-appearance: none;
-    box-sizing: border-box;
-    width: 100%;
-    border: 2px solid #95a5a6;
-    border-radius: 4px;
-    padding: 0.5em;
-    font-size: 1rem;
-    color: #34495e;
-    transition: 0.15s;
-}
-.textfield::-webkit-input-placeholder {
-    color: #95a5a6;
-    transition: 0.15s;
-}
-.textfield:-ms-input-placeholder {
-    color: #95a5a6;
-    transition: 0.15s;
-}
-.textfield::-ms-input-placeholder {
-    color: #95a5a6;
-    transition: 0.15s;
-}
-.textfield::placeholder {
-    color: #95a5a6;
-    transition: 0.15s;
-}
-.textfield:hover {
-    outline-width: 0;
-    color: #5d6d77;
-    border-color: #5d6d77;
-}
-.textfield:hover::-webkit-input-placeholder {
-    color: #5d6d77;
-}
-.textfield:hover:-ms-input-placeholder {
-    color: #5d6d77;
-}
-.textfield:hover::-ms-input-placeholder {
-    color: #5d6d77;
-}
-.textfield:hover::placeholder {
-    color: #5d6d77;
-}
-.textfield:focus {
-    outline-width: 0;
-    border-color: #34495e;
-}
-.textfield:focus::-webkit-input-placeholder {
-    color: #34495e;
-}
-.textfield:focus:-ms-input-placeholder {
-    color: #34495e;
-}
-.textfield:focus::-ms-input-placeholder {
-    color: #34495e;
-}
-.textfield:focus::placeholder {
-    color: #34495e;
-}
-.container {
-    padding-left: 3.5%;
-    padding-right: 3.5%;
-}
-.container:after, .container:before {
+// .secondary-btn:focus.active {
+//     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3),
+//         0 0 0 2px rgba(52, 152, 219, 0.4);
+// }
+// .secondary-btn:disabled {
+//     color: #3498db;
+//     background-color: rgba(52, 152, 219, 0);
+// }
+
+.projects-container:after,
+.projects-container:before {
     content: " ";
     display: table;
 }
-.container:after {
+.projects-container:after {
     clear: both;
 }
-.row {
+.projects-row {
     margin-left: auto;
     margin-right: auto;
 }
-.row:after, .row:before {
+.projects-row:after,
+.projects-row:before {
     content: " ";
     display: table;
 }
-.row:after {
+.projects-row:after {
     clear: both;
 }
-.row .row {
+.projects-row .projects-row {
     margin-left: -8px;
     margin-right: -8px;
 }
@@ -1430,14 +1344,48 @@ footer p span {
 .aspect--16x9 {
     padding-bottom: 56.25%;
 }
-.col-1\@xs, .col-2\@xs, .col-3\@xs, .col-4\@xs, .col-5\@xs, .col-6\@xs, .col-1\@sm, .col-2\@sm, .col-3\@sm, .col-4\@sm, .col-5\@sm, .col-6\@sm, .col-7\@sm, .col-8\@sm, .col-9\@sm, .col-10\@sm, .col-11\@sm, .col-12\@sm, .col-1\@md, .col-2\@md, .col-3\@md, .col-4\@md, .col-5\@md, .col-6\@md, .col-7\@md, .col-8\@md, .col-9\@md, .col-10\@md, .col-11\@md, .col-12\@md {
+.col-1\@xs,
+.col-2\@xs,
+.col-3\@xs,
+.col-4\@xs,
+.col-5\@xs,
+.col-6\@xs,
+.col-1\@sm,
+.col-2\@sm,
+.col-3\@sm,
+.col-4\@sm,
+.col-5\@sm,
+.col-6\@sm,
+.col-7\@sm,
+.col-8\@sm,
+.col-9\@sm,
+.col-10\@sm,
+.col-11\@sm,
+.col-12\@sm,
+.col-1\@md,
+.col-2\@md,
+.col-3\@md,
+.col-4\@md,
+.col-5\@md,
+.col-6\@md,
+.col-7\@md,
+.col-8\@md,
+.col-9\@md,
+.col-10\@md,
+.col-11\@md,
+.col-12\@md {
     position: relative;
     box-sizing: border-box;
     min-height: 1px;
     padding-left: 8px;
     padding-right: 8px;
 }
-.col-1\@xs, .col-2\@xs, .col-3\@xs, .col-4\@xs, .col-5\@xs, .col-6\@xs {
+.col-1\@xs,
+.col-2\@xs,
+.col-3\@xs,
+.col-4\@xs,
+.col-5\@xs,
+.col-6\@xs {
     float: left;
 }
 .col-1\@xs {
@@ -1459,102 +1407,116 @@ footer p span {
     width: 100%;
 }
 @media screen and (min-width: 768px) {
-    .col-1\@sm, .col-2\@sm, .col-3\@sm, .col-4\@sm, .col-5\@sm, .col-6\@sm, .col-7\@sm, .col-8\@sm, .col-9\@sm, .col-10\@sm, .col-11\@sm, .col-12\@sm {
+    .col-1\@sm,
+    .col-2\@sm,
+    .col-3\@sm,
+    .col-4\@sm,
+    .col-5\@sm,
+    .col-6\@sm,
+    .col-7\@sm,
+    .col-8\@sm,
+    .col-9\@sm,
+    .col-10\@sm,
+    .col-11\@sm,
+    .col-12\@sm {
         float: left;
-   }
+    }
     .col-1\@sm {
         width: 8.33333%;
-   }
+    }
     .col-2\@sm {
         width: 16.66667%;
-   }
+    }
     .col-3\@sm {
         width: 25%;
-   }
+    }
     .col-4\@sm {
         width: 33.33333%;
-   }
+    }
     .col-5\@sm {
         width: 41.66667%;
-   }
+    }
     .col-6\@sm {
         width: 50%;
-   }
+    }
     .col-7\@sm {
         width: 58.33333%;
-   }
+    }
     .col-8\@sm {
         width: 66.66667%;
-   }
+    }
     .col-9\@sm {
         width: 75%;
-   }
+    }
     .col-10\@sm {
         width: 83.33333%;
-   }
+    }
     .col-11\@sm {
         width: 91.66667%;
-   }
+    }
     .col-12\@sm {
         width: 100%;
-   }
+    }
     .container {
         padding-left: 7%;
         padding-right: 7%;
-   }
+    }
     .row {
         max-width: 1200px;
-   }
+    }
 }
 @media screen and (min-width: 1024px) {
-    .col-1\@md, .col-2\@md, .col-3\@md, .col-4\@md, .col-5\@md, .col-6\@md, .col-7\@md, .col-8\@md, .col-9\@md, .col-10\@md, .col-11\@md, .col-12\@md {
+    .col-1\@md,
+    .col-2\@md,
+    .col-3\@md,
+    .col-4\@md,
+    .col-5\@md,
+    .col-6\@md,
+    .col-7\@md,
+    .col-8\@md,
+    .col-9\@md,
+    .col-10\@md,
+    .col-11\@md,
+    .col-12\@md {
         float: left;
-   }
+    }
     .col-1\@md {
         width: 8.33333%;
-   }
+    }
     .col-2\@md {
         width: 16.66667%;
-   }
+    }
     .col-3\@md {
         width: 25%;
-   }
+    }
     .col-4\@md {
         width: 33.33333%;
-   }
+    }
     .col-5\@md {
         width: 41.66667%;
-   }
+    }
     .col-6\@md {
         width: 50%;
-   }
+    }
     .col-7\@md {
         width: 58.33333%;
-   }
+    }
     .col-8\@md {
         width: 66.66667%;
-   }
+    }
     .col-9\@md {
         width: 75%;
-   }
+    }
     .col-10\@md {
         width: 83.33333%;
-   }
+    }
     .col-11\@md {
         width: 91.66667%;
-   }
+    }
     .col-12\@md {
         width: 100%;
-   }
+    }
 }
-
-
-
-
-
-
-
-
 
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
