--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1117,6 +1117,7 @@ footer p span {
 // Projects Page Style ----------------------------------------------------
 .project-page-title h3 {
     color: var(--clr-secondary);
+    font-size: 2rem;
 }
 .project-page-title hr {
     background-color: var(--clr-accent);
