--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1375,6 +1375,11 @@ footer p span {
   padding: 1em;
 }
 
+.picture-item__details a {
+  text-decoration: none;
+  color: var(--clr-secondary);
+}
+
 .picture-item__description {
   width: 100%;
   padding: 0 2em 1em 1em;
