added log in modal

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1365,6 +1365,8 @@ footer p span {
   height: 100%;
   overflow: hidden;
   background: #fff;
+  border-radius: 1.3rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
 }
 
 .picture-item__details {
@@ -1661,12 +1663,7 @@ footer p span {
     width: 100%;
   }
 
-  .container {
-    padding-left: 7%;
-    padding-right: 7%;
-  }
-
-  .row {
+  .projects-row {
     max-width: 1200px;
   }
 }
@@ -1734,6 +1731,54 @@ footer p span {
     width: 100%;
   }
 }
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: var(--clr-primary);
+  margin: 15% auto;
+  /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: var(--clr-dark);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: var(--clr-secondary);
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
