--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -141,6 +141,7 @@ h6 {
     width: 330px;
     margin: auto;
 }
+
 .costume-nav {
     background-color: #fff;
     position: relative;
@@ -1143,6 +1144,7 @@ footer p span {
 .picture-item img {
     display: block;
     width: 100%;
+    
 }
 .btn-group {
     display: flex;
@@ -1183,6 +1185,8 @@ footer p span {
     height: 100%;
     overflow: hidden;
     background: #fff;
+    border-radius: 1.3rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
 }
 .picture-item__details {
     display: flex;
@@ -1461,11 +1465,11 @@ footer p span {
     .col-12\@sm {
         width: 100%;
     }
-    .container {
-        padding-left: 7%;
-        padding-right: 7%;
-    }
-    .row {
+    // .projects-container {
+    //     padding-left: 7%;
+    //     padding-right: 7%;
+    // }
+    .projects-row {
         max-width: 1200px;
     }
 }
@@ -1521,6 +1525,46 @@ footer p span {
         width: 100%;
     }
 }
+// Login/Signup Form Style --------------------------------------------------
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: var(--clr-primary);
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: var(--clr-dark);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: var(--clr-secondary);
+    text-decoration: none;
+    cursor: pointer;
+  }
+//   Modal Inner Form----------------
+
 
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
