--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -120,12 +120,18 @@ h6 {
     color: var(--clr-dark);
 }
 
-.nav__link--active {
-    color: var(--clr-secondary);
+.---active,
+.nav__link:active {
+    color: var(--clr-secondary) !important;
+    
 }
-
+.nav__link span {
+    font-weight: 900 ;
+    font-family: 'Vazir';
+}
 .nav__icon {
     font-size: 1.5rem;
+    // font-weight: 900 !important;
 }
 
 /* Navbar ------------------------------------------------------------------------ */
@@ -1002,7 +1008,7 @@ footer p span {
     height: 100%;
     border-radius: 4px;
     background: #fff;
-    transition: 0.5s;
+    transition: all linear 0.3s;
     z-index: -1;
 }
 .card:hover:before {
@@ -1020,7 +1026,7 @@ footer p span {
     bottom: 8px;
     right: 10px;
     background: var(--clr-primary);
-    transition: 0.5s;
+    transition: all linear 0.3s;
     z-index: 1;
     border-radius: 1.3rem;
 }
@@ -1045,7 +1051,7 @@ footer p span {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: 1.5s;
+    transition: 1s;
     border-radius: 0.3rem;
 }
 .card .details {
